--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
         <title>This... Is... Jeopardy!</title>
 
         <!-- Include links to CSS stylesheets below -->
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
         <link rel="stylesheet" href="style_light.css">
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" /> -->
-        <!-- <link rel="stylesheet" href="styles.css" /> -->
     </head>
 
     <body>
+        <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
         <!-- Include links to JavaScript files below -->
-        <script src="https://kit.fontawesome.com/1904242483.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="node_modules/axios/dist/axios.js"></script>
         <script type="module" src="jeopardy_view.js"></script>
         <script type="module" src="jeopardy_model.js"></script>
-        <!-- <script type="module" src="twitter_controller.js"></script> -->
         <script type="module" src="jeopardy_script.js"></script>
     </body>
 </html>
