--- a/login.html
+++ b/login.html
@@ -10,36 +10,21 @@
     <!-- Include links to CSS stylesheets below -->
     <link rel="stylesheet" href="style_light.css">
 
-    <!-- Firebase CDN -->
+    <!-- Firebase Auth UI CDN -->
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.css" />
+
 </head>
 
 <body>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
+    <!-- Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
-
-    <!-- <script>
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        var firebaseConfig = {
-            apiKey: "AIzaSyBrNvPRJcYcnsluTBmrZUPKVhpFS729BZk",
-            authDomain: "comp426-jeopardy.firebaseapp.com",
-            projectId: "comp426-jeopardy",
-            storageBucket: "comp426-jeopardy.appspot.com",
-            messagingSenderId: "58052781715",
-            appId: "1:58052781715:web:441adc1692f0db98724f66",
-            measurementId: "G-H9Q7G18BSE"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-    </script> -->
+    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
 
     <script type="module" src="login_script.js"></script>
 
