Change stylesheet paths.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>This... Is... Jeopardy!</title>
 
         <!-- Include links to CSS stylesheets below -->
-        <link rel="stylesheet" href="style_light.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
