--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <title>Login</title>
 
     <!-- Include links to CSS stylesheets below -->
-    <link rel="stylesheet" href="style_light.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- Firebase Auth UI CDN -->
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
