--- a/jeopardy.html
+++ b/jeopardy.html
@@ -14,6 +14,7 @@
         <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <!-- Include links to JavaScript files below -->
         <script src="node_modules/axios/dist/axios.js"></script>
         <script type="module" src="jeopardy_view.js"></script>
