Clean up initializeView() by moving work into html, add score div.

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -20,5 +20,19 @@
         <script type="module" src="jeopardy_view.js"></script>
         <script type="module" src="jeopardy_model.js"></script>
         <script type="module" src="jeopardy_script.js"></script>
+
+        <div id="header_div">
+            <h1>Jeopardy!</h1>
+            <button id="color_switch">
+            </button>
+        </div>
+
+        <div id="board_div">
+
+        </div>
+
+        <div id="score_div">
+            <p>Score: <span id="score"></span></p>
+        </div>
     </body>
 </html>
