Refactor modal compontents to use CSS ids instead of classes.

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -31,23 +31,23 @@
             <table id="game_board">
 
             </table>
-            <div class="modal">
-                <div class="modal_content">
-                    <p class="category large">Category: <span class="category"></span></p>
-                    <p class="question large"></p>
+            <div id="modal">
+                <div id="modal_content">
+                    <p class="large">Category: <span id="category"></span></p>
+                    <p id="question" class="large"></p>
                     <hr>
-                    <p class="answer large">Answer: <span class="answer"></span></p>
-                    <div class="answer_description"></div>
+                    <p id="answer_p" class="large">Answer: <span id="answer"></span></p>
+                    <div id="answer_description"></div>
                     <div id="close_button_div">
                         <button id="close_button">Close</button>
                     </div>
-                    <div class="post_reveal_buttons_div">
-                        <div class="answer_buttons buttons">
+                    <div id="post_reveal_buttons_div">
+                        <div id="answer_buttons_div" class="buttons">
                             <button id="correct_button" class="correct">I got the answer correct!</button>
                             <button id="incorrect_button" class="incorrect">I got the answer incorrect</button>
                         </div>
                     </div>
-                    <div class="wiki_button buttons">
+                    <div id="wiki_button_div" class="wiki_button buttons">
                         <button id="wiki_button" value="REVEAL">Tell me about this answer!</button>
                     </div>
                 </div>
