Implement logging out.

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -25,6 +25,7 @@
             <h1>Jeopardy!</h1>
             <button id="color_switch">
             </button>
+            <button id="log_out">Log Out</button>
         </div>
 
         <div id="board_div" style="display: none;">
